--- a/.lemrc
+++ b/.lemrc
@@ -10,4 +10,4 @@
               (uiop:split-string line :separator '(#\=))
             (setf (uiop:getenv key) value)))
 
-(setf lem-rooms-client/agent::*agent-path* "../editor-agent/index.js")
+;(setf lem-rooms-client/agent::*agent-path* "../editor-agent/index.js")
