--- a/.lemrc
+++ b/.lemrc
@@ -23,4 +23,6 @@
   (loop :for (key . value) :in (parse-env ".env")
         :do (setf (uiop:getenv key) value)))
 
-(setf rooms-client/agent::*agent-path* "../editor-agent/index.js")
+;(setf rooms-client/agent::*agent-path* "~/rooms-dev/rooms/editor-agent/index.js")
+
+;(log:config :sane :daily "/tmp/lem.log" :info)
